# DeviceProgramming

./: .gitignore  README.md
pico-examples/C++/: CMakeLists.txt
pico-examples/C++/arcade_button_module/: CMakeLists.txt  arcade_button_module.cpp
pico-examples/C++/arcade_button_module_test_pins/: CMakeLists.txt  arcade_button_module_test_pins.cpp
pico-examples/C++/blink-led/: CMakeLists.txt  blink-led.c
pico-examples/C++/button_master_module/: CMakeLists.txt  button_master_module.cpp
pico-examples/C++/i2c_arcade_demo/: CMakeLists.txt  i2c_arcade_demo.cpp  i2c_software_slave_lib.cpp  i2c_software_slave_lib.h
pico-examples/C++/i2c_arcade_demo_2/: CMakeLists.txt  i2c_arcade_demo_2.cpp
pico-examples/C++/i2c_hardware/: CMakeLists.txt
pico-examples/C++/i2c_hardware/master/: CMakeLists.txt  i2c_hardware_master.c
pico-examples/C++/i2c_hardware/slave/: CMakeLists.txt  i2c_hardware_slave.c
pico-examples/C++/i2c_listener/: CMakeLists.txt
pico-examples/C++/i2c_listener/i2c_listener_python/: create_venv.sh  i2c_listener.ipynb  i2c_listener.py
pico-examples/C++/i2c_listener/src/: i2c_listener.cpp  tusb_config.h  usb_descriptors.cpp
pico-examples/C++/i2c_software/master/: CMakeLists.txt  i2c_software_master.cpp
pico-examples/C++/i2c_software/master/student_code/: main.cpp
pico-examples/C++/i2c_software/slave/: CMakeLists.txt  i2c_software_slave.cpp  i2c_software_slave_lib.cpp  i2c_software_slave_lib.h
pico-examples/uPython/blink-led/: blink_led.py
pico-examples/uPython/i2c_hardware/master/: master.py
pico-examples/uPython/i2c_hardware/slave/: slave.py  slave_claude.py
pico-examples/uPython/i2c_software/master/: master.py  master_claude.py
