# cmake_minimum_required(VERSION 3.12)

# add_executable(i2c_listener
#     src/i2c_listener.cpp
#     src/usb_descriptors.cpp
# )

# target_link_libraries(i2c_listener pico_stdlib tinyusb_device tinyusb_board)

# pico_enable_stdio_usb(i2c_listener 1)
# pico_enable_stdio_uart(i2c_listener 0)

# pico_add_extra_outputs(i2c_listener)